[package]
name = "webbit"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
rocket = "=0.5.0-rc.3"

linkspace = {path = "../linkspace/crates/linkspace"} # { git = "https://github.com/AntonSol919/linkspace"}

tokio = { version = "1.28.2", features = ["process"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
base64 = "0.21.2"
